client/wfnews-war/src/main/angular/src/styles/_base.scss
/* ... */
.search-location-close-container{
    border:1px solid #dddddd;
    border-left: none;
    border-radius: 5px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    height: calc(100% + 2px);
    display: flex;
    align-items: center;
    color: #dddddd;
}
.search-location-close-container mat-icon{
    padding-left: 4px;
    padding-right: 4px;

}
.search-location-close{
    border-left: 1px solid #dddddd;
    cursor: pointer;
}

.smk-toolbar {
    box-shadow: none !important;
}
.signpost {
	position: relative;

}

.signpost:before {
	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!-- Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --%3E%3Cpath d='M507.31 84.69L464 41.37c-6-6-14.14-9.37-22.63-9.37H288V16c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v16H56c-13.25 0-24 10.75-24 24v80c0 13.25 10.75 24 24 24h385.37c8.49 0 16.62-3.37 22.63-9.37l43.31-43.31c6.25-6.26 6.25-16.38 0-22.63zM224 496c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V384h-64v112zm232-272H288v-32h-64v32H70.63c-8.49 0-16.62 3.37-22.63 9.37L4.69 276.69c-6.25 6.25-6.25 16.38 0 22.63L48 342.63c6 6 14.14 9.37 22.63 9.37H456c13.25 0 24-10.75 24-24v-80c0-13.25-10.75-24-24-24z' fill='%234f4f52'/%3E%3C/svg%3E");
    position: absolute;
	width: calc(100% - 10px);
	height:100%;
	top:0;
}

